package edu.fiuba.algo3.Modelo;

public class AlgoRoma {
    public void registrarCantidadJugadores(int i) {
    }

    public void registrarNombre(String rosher) {
    }
}
