package edu.fiuba.algo3.Modelo;

import edu.fiuba.algo3.Modelo.Casillas.Ocupacion;
import edu.fiuba.algo3.Modelo.Equipamientos.*;
import edu.fiuba.algo3.Modelo.Obstaculos.FieraSalvaje;
import edu.fiuba.algo3.Modelo.Obstaculos.Obstaculo;
import edu.fiuba.algo3.Modelo.Seniority.Novato;
import edu.fiuba.algo3.Modelo.Seniority.Seniority;

import java.util.ArrayList;
import java.util.List;
import java.util.stream.Collectors;

public class Gladiador {
    private int posicionActual;
    private int energia;
    private Seniority unSeniority;

    private List<Equipamiento> listaDeEquipamiento;


    public Gladiador(int unaEnergia, Novato novato, int posicionActual) {
        this.energia = unaEnergia;
        this.posicionActual = posicionActual;
        this.unSeniority = novato;
        this.listaDeEquipamiento = new ArrayList<>();
    }

    public int obtenerEnergia() {
        return energia;
    }


    public void cambiarSeniority(Seniority seniority) {
        this.unSeniority = seniority;
    }

    public void avanzar(int cantidadAMoverse) {
        posicionActual = posicionActual + cantidadAMoverse;
        System.out.println("\nGladiador avanza una casilla ---> está en la posicion:  " + posicionActual);

    }
    public void retroceder(int cantidadAMoverse) {
        posicionActual = posicionActual - cantidadAMoverse;
        System.out.println("\nGladiador retrocede ----> está en la posicion: " + posicionActual);

    }

    public int obtenerPosicion() {
        return posicionActual;
    }

    public void aumentarEnergiaAlIniciarElTurno(){energia = unSeniority.modificarEnergia(energia);}

    public int obtenerCantidadDeEquipamiento(){

        listaDeEquipamiento = filtrarRepetidos();//ver test13 de OcupacionesTests
        return listaDeEquipamiento.size();

    }

    private List<Equipamiento> filtrarRepetidos() {
        System.out.println("\n==> Filtrando equipamientos repetidos ... ok");
        return listaDeEquipamiento.stream()
                .filter(distinctByClass())
                .collect(Collectors.toList());
    }

    public static java.util.function.Predicate<Object> distinctByClass() {
        java.util.Set<Class<?>> seen = new java.util.HashSet<>();
        return objeto -> seen.add(objeto.getClass());
    }

    public void agregarEquipamiento(Equipamiento equipamiento){
            listaDeEquipamiento.add(equipamiento);

    }

    public boolean tieneLLave() {
        // Utilicé Stream para buscar el elemento en la lista
        return ((listaDeEquipamiento.stream()
                .anyMatch(elemento -> elemento instanceof LLave)) && cantidadEquipamientoPermitido());

    }

    private boolean cantidadEquipamientoPermitido() {
        return (this.obtenerCantidadDeEquipamiento() == 3);
    }
    
    public void combatir(Obstaculo unObstaculo) {

        for (Equipamiento unEquipamiento: listaDeEquipamiento) {
            energia = unEquipamiento.modificarEnergia(energia);
        }

        energia = unObstaculo.modificarEnergia(energia);

    }

    public void aumentarEnergia(int unaEnergia) {
        this.energia = this.energia + unaEnergia;
    }

    //desacoplar con un refactor
    public void agregarEquipamientoSegunCantidadDePremios() {
        if (listaDeEquipamiento.size() <= 3) {
            listaDeEquipamiento.add(crearEquipamientoSegunCantidadDePremios());
            System.out.println("\n===> Obtiene un " + listaDeEquipamiento.get(listaDeEquipamiento.size() - 1).obtenerNombre() + " como premio\n");
        }
    }

    private Equipamiento crearEquipamientoSegunCantidadDePremios() {
        switch (listaDeEquipamiento.size()) {
            case 0:
                return new Casco(5);
            case 1:
                return new Armadura(5);
            case 2:
                return new EscudoYEspada(8);
            default:
                return new LLave();
        }
    }
}
