package edu.fiuba.algo3.Modelo;

public class Nada implements Ocupacion {
    @Override
    public int modificarEnergia(int unaEnergia) {
        return 0;
    }
}
