package edu.fiuba.algo3.Modelo.Premios;

import edu.fiuba.algo3.Modelo.Gladiador;
import edu.fiuba.algo3.Modelo.Casillas.VisitorDeCasillas;

public interface Premio {
    void modificarEnergia(Gladiador unGladiador);
}
