package edu.fiuba.algo3.Modelo;

public interface Seniority {
    int modificarEnergia(int unaEnergia);
}
