@startuml


class   AlgoRoma{
    +registrarCantidadJugadores(unsJugadores int)
    +registrarNombres(unNombre String)
}


class Gladiador{
    -energia:int
    -posicionActual:int
    +Gladiador(unaEnergia int, seniority Seniority,unaPosicion int)
    +obtenerEnergia()
    +cambiarSeniority(seniority Seniority)
    +avanzar(cantidadAMoverse int)
    +retroceder(cantidadAMoverse int)
    +combatir(unObstaculo Obstaculo)
}


class Tablero{
    -cantidadJugadores:int
    -controladorCantidadMoverse:int
    +Tablero(int cantidadJugadores, turno Turno)
    +validarTurno(unGladiador Gladiador):Boolean
    +añadirJugador(unGladiador Gladiador, unNombre String)
    +avanzar(unDado Dado)
}


class Dado{
    +tirar():int
}

interface Premio{
    +{abstract}modificarEnergia(unGladiador Gladiador):Gladiador
}


interface  Obstaculo{
    +{abstract}combatir(unGladiador Gladiador)
    +{abstract}modificarEnergia(unaEnergia int):int
}

class FieraSalvaje{
    +Gladiador aceptarVisitante(Visitor VisitorDeCasillas,ungladiador Gladiador):VisitorDeCasillas
    +combatir(unGladiador Gladiador)
}

class PremioEquipamiento{
      +Gladiador aceptarVisitante(visitor VisitorDeCasillas, ungladiador Gladiador)
      }

interface  Seniority{

    +{abstract}modificarEnergia(unaEnergia int):int

}
class Novato{
    +modificarEnergia(unaEnergia int:int
}
class SemiSenior{
    +modificarEnergia(unaEnergia int):int
}
class Senior{
    +modificarEnergia(unaEnergia int):int
}

interface Equipamiento{
    +{abstract}modificarEnergia(unaEnergia int):int
}
class Casco{
    +modificarEnergia(unaEnergia int):int
}
class Escudo{
    +modificarEnergia(unaEnergia int):int
}
class Armadura{
    +modificarEnergia(unaEnergia int):int
}
class Espada{
    +modificarEnergia(unaEnergia int:int
}
class LLave{
    +modificarEnergia(unaEnergia int):int
}
class Nada{
    +modificarEnergia(unaEnergia int):int
}

class Comida{
    +modificarEnergia(unaEnergia int):int
}

interface Ocupacion{
    Gladiador aceptarVisitante(visitor VisitorDeCasillas, ungladiador Gladiador);
}

class Casilla{
    +Casilla(unaCasilla:int):void
    +Gladiador interactuarConLaOcupacion(visitor VisitorDeCasillas,ungladiador Gladiador):Ocupacion
}

interface VisitorDeCasillas{
    +Gladiador visitar(casco Casco, unGladiador Gladiador)
    +Gladiador visitar(armadura Armadura, unGladiador Gladiador)
    +Gladiador visitar(escudoYEspada EscudoYEspada,unGladiador Gladiador)
    +Gladiador visitar(lLave LLave, unGladiador Gladiador);
    +Gladiador visitar(fieraSalvaje FieraSalvaje, unGladiador Gladiador)
    +Gladiador visitar(nada NadaOcupacion,unGladiador Gladiador)
    +Gladiador visitar(comida Comida,unGladiador Gladiador)
    +Gladiador visitar(unPremio PremioEquipamiento,unGladiador Gladiador)
}


class OperacionVisitorDeCasillas{
    +Gladiador visitar(casco Casco, unGladiador Gladiador)
    +Gladiador visitar(armadura Armadura,unGladiador Gladiador)
    +Gladiador visitar(escudoYEspada EscudoYEspada, unGladiador Gladiador)
    +Gladiador visitar(llave LLave , unGladiador Gladiador )
    +Gladiador visitar(fieraSalvaje FieraSalvaje ,unGladiador Gladiador)
    +Gladiador visitar(nada NadaOcupacion, unGladiador Gladiador)
    +Gladiador visitar(comida Comida,unGladiador Gladiador)
    +Gladiador visitar(unPremio PremioEquipamiento ,unGladiador Gladiador)
}

class Turno {
    -turnoActual:int
    -maximaCantidadDeTurnos:int
    +Turno(int maximaCantidad)
    +jugar(unGladiador Gladiador):boolean
    +Gladidor siguienteTurno(gladiadores ArrayList<Gladiador>):Gladiador
    }

class NadaOcupacion{
    Gladiador aceptarVisitante(visitor VisitorDeCasillas, ungladiador Gladiador);
}

Tablero *-left->"*"Casilla
Tablero *-right->"2...6 "Gladiador
AlgoRoma o--> Tablero
Tablero -up-> Dado
Tablero --> Turno

Casilla --> Ocupacion
Premio <|... Comida
Ocupacion <|... Comida

Equipamiento <|...Casco
Equipamiento <|... Escudo
Equipamiento <|... Armadura
Equipamiento <|... Espada
Equipamiento <|... LLave
Equipamiento <|... Nada
Ocupacion<|.. PremioEquipamiento
Ocupacion<|.. NadaOcupacion

Obstaculo <|.. FieraSalvaje
Ocupacion <|.. FieraSalvaje

Ocupacion <|... Armadura
Ocupacion <|... Casco
Ocupacion <|... EscudoYEspada
Ocupacion <|... LLave

Seniority <|.. Novato
Seniority <|.. SemiSenior
Seniority <|.. Senior

Gladiador -> "*"Equipamiento
Gladiador -> "1"Seniority

VisitorDeCasillas<|.. OperacionVisitorDeCasillas

@enduml